@@ -167,6 +167,8 @@ msg_bankrupt_town: ' couldn''t afford to remain a town.'
 msg_bankrupt_nation: ' couldn''t afford to remain a nation.'
 msg_nation_not_neutral: '&bNation couldn''t afford it''s neutral state.'
 msg_nation_cant_neutral: '&bNation couldn''t afford to become a neutral nation.'
+msg_neutral_disabled: '&bNation neutrality is disabled globally.'
+msg_you_paid: '&bYou paid %s to set neutral status.'
 msg_nation_set_neutral: '&bSuccessfully changed nation''s neutrality.'
 msg_nation_allow_neutral: '&bNation permissions to remain neutral are now: %s'
 msg_nation_neutral: '&bYour nation is now'
@@ -291,6 +293,8 @@ msg_registration_old: '&eWelcome this is your first login.@You''ve successfully 
 msg_war_eliminated: '&6[War] &b%s was eliminated from the war.'
 msg_war_forfeited: '&6[War] &b%s forfeited.'
 msg_war_join: '&6[War] &b%s joined the fight!'
+msg_war_join_forced: '&6[War] The nation of &b%s has been forced into war due to global settings!'
+msg_war_join_nation: '&6[War] The nation of &b%s has joined the war!'
 msg_war_lose_block: '(%s) belonging to %s has fallen.'
 msg_war_score: '&6[War] &b%s scored %d points!'
 msg_war_cannot_do: '&cYou cannot do this when the world is at war.'
